--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
               <h2 class="card__title">
                 Фритрек и нулевой спринт: Подготовка к работе
               </h2>
-              <img
-                src="./images/Food_truck_at_night.png"
-                alt="Грузовик с едой ночью"
-                class="card__image no_effect"
-              />
+              <div class="card__image-box">
+                <img
+                  src="./images/Food_truck_at_night.png"
+                  alt="Грузовик с едой ночью"
+                  class="card__image no_effect"
+                />
+                <span class="watermark" aria-hidden="true">&lt;/HTML&gt;</span>
+              </div>
             </div>
             <p class="card__description">
               Это было самое начало пути. На этом этапе важно было проникнуться
@@ -47,11 +50,10 @@
               Место для ваших воспоминаний о начале обучения.
             </p>
             <div class="buttons">
-              <button class="like_heart">
+              <button class="button card__icon-button">
                 <svg
-                  width="39"
-                  height="36"
-                  viewBox="0 0 39 36"
+                  class="like-icon"
+                  viewBox="0 -2 39 36"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -80,13 +82,28 @@
                   </defs>
                 </svg>
               </button>
-              <button class="like_note">
-                <span class="button__text">LIKE</span>
+              <button class="button card__like-button">
+                <span class="button__text">Like</span>
               </button>
             </div>
           </article>
         </li>
       </ul>
+      <button
+        onclick="window['dialog__save'].showModal()"
+        class="button card__save_memory-button"
+      >
+        <svg
+          class="icon__floppy"
+          viewBox="0 0 40 40"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <use href="./svg/floppy.svg#floppy"></use>
+        </svg>
+        <span class="button__text">Сохранить на память</span>
+      </button>
+      <dialog id="dialog__save" class="dialog__save"></dialog>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
