Add github pages

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <img
                   src="./images/1_Zero_sprint.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Развилка с указатели направлений"
                   class="card__image picture_filter_brightness"
                 />
@@ -105,6 +106,7 @@
                 <img
                   src="./images/2_Im_black_sheet.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Человек, глядящий с высоты горы вниз в неизведанное"
                   class="card__image picture_filter_hue-rotate"
                 />
@@ -177,6 +179,7 @@
                 <img
                   src="./images/3_If_I_cant.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Человек на краю скалы, глядящий на водопад"
                   class="card__image picture_filter_saturate"
                 />
@@ -246,6 +249,7 @@
                 <img
                   src="./images/4_Going_to_ideal.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Сложные треугольные формы здания из стеклянных окон и металличсеких рам"
                   class="card__image picture_filter_invert"
                 />
@@ -317,6 +321,7 @@
                 <img
                   src="./images/5_Nearby_people.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Группа радостных людей на фоне восходящего солнца"
                   class="card__image picture_filter_sepia"
                 />
@@ -390,6 +395,7 @@
                 <img
                   src="./images/6_Workaround_strategies.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Сложный фасад здания со стеклянными и металличсекими элементоми с разными плоскостями"
                   class="card__image picture_filter_contrast"
                 />
@@ -461,6 +467,7 @@
                 <img
                   src="./images/7_Dont_give_up.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Семья в походной одежде идёт по лесной тропе"
                   class="card__image picture_filter_opacity_grayscale_invert"
                 />
@@ -532,6 +539,7 @@
                 <img
                   src="./images/8_Im_here.webp"
                   onerror="this.src = './images/Food_truck_at_night.png';"
+                  loading="lazy"
                   alt="Человек на большом камне посреди морского горизонта"
                   class="card__image picture_filter_blur"
                 />
