--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
       media="(max-width: 376px)"
       href="./styles/mobile.css"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple-touch-icon.png"
+    />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./svg/favicon.svg" type="images/svg+xml" />
     <link rel="mobile-icon" href="./images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="header_topic">&lt;/HTML&gt;</h1>
-      <p class="header_topic_note">закрывающий тег</p>
+      <a href="" rel="home" class="header_topic_logo">&lt;/HTML&gt;</a>
+      <h1 class="header_topic_note">закрывающий тег</h1>
     </header>
     <main>
       <ul class="cards__list">
@@ -56,7 +60,11 @@
               направлении...
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__icon-button"
+              >
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -92,7 +100,11 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__like-button"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -129,7 +141,11 @@
               что-то очень ценное.
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__icon-button"
+              >
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -165,7 +181,11 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__like-button"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -199,7 +219,11 @@
               проектов - новые вызовы.
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__icon-button"
+              >
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -235,7 +259,11 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__like-button"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -271,7 +299,11 @@
               разрываясь. Благо было кому помочь)
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__icon-button"
+              >
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -307,7 +339,11 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__like-button"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -345,7 +381,11 @@
               получения ещё больших знаний и реализации новых проектов.
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__icon-button"
+              >
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -381,7 +421,11 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__like-button"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -417,7 +461,11 @@
               прекращается...
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__icon-button"
+              >
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -453,7 +501,11 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button
+                type="button"
+                type="button"
+                class="button card__like-button"
+              >
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -489,7 +541,7 @@
               как и ты верят, что всё получится. Я не могу их подвести...
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -525,7 +577,7 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -559,10 +611,10 @@
             <p class="card__description">
               Кажется было сложно. Нет, это только начало. Всё приходит с опытом
               и со временем. Дорога дальняя - бери попутчиков и друзей. И
-              запасайся... не только покорном)
+              запасайся... не только попкорном)
             </p>
             <div class="buttons">
-              <button class="button card__icon-button">
+              <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
                   viewBox="-2 -1 43 38"
@@ -598,7 +650,7 @@
                   </defs> -->
                 </svg>
               </button>
-              <button class="button card__like-button">
+              <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
             </div>
@@ -618,7 +670,7 @@
         >
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
-        <span class="button__text">Сохранить на память</span>
+        <p class="button__text">Сохранить на память</p>
       </button>
     </main>
     <script src="./scripts/like.js" defer></script>
@@ -632,9 +684,7 @@
         >
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
-        <span class="dialog__save_text"
-          >Вставьте дискету, чтобы продолжить</span
-        >
+        <p class="dialog__save_text">Вставьте дискету, чтобы продолжить</p>
       </div>
       <button
         class="button dialog__button_save_close"
