Correct Pixel Pefect

--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
               даже не задумывался) И задуматься, что дальше будет тянуть в этом
               направлении...
             </p>
+            <!-- <p class="card__description">
+              Место для ваших воспоминаний о начале обучения.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -132,11 +135,14 @@
               неизведанную глубину, в которой как легко потеряться, так и найти
               что-то очень ценное.
             </p>
+            <!-- <p class="card__description">
+              Место для ваших воспоминаний о начале первого спринта.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -202,11 +208,14 @@
               симптомы нехватки времени и рассеянности внимания при реализации
               проектов - новые вызовы.
             </p>
+            <!-- <p class="card__description">
+              Место для ваших воспоминаний об окончании первого спринта.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -274,11 +283,14 @@
               течению проекта и выстраивать свою жизнь в гармонии, не
               разрываясь. Благо было кому помочь)
             </p>
+            <!-- <p class="card__description">
+              Место для ваших воспоминаний о начале второго спринта.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -348,11 +360,14 @@
               скорыми студентами помогало идти в темпе и не отставать от
               получения ещё больших знаний и реализации новых проектов.
             </p>
+            <!-- <p class="card__description">
+              Место для ваших воспоминаний о начале первого спринта.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -420,11 +435,14 @@
               потребовалось уже больше времени... Но движение вперёд не
               прекращается...
             </p>
+            <!-- <p class="card__description">
+              Место для ваших воспоминаний о начале обучения.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -492,11 +510,14 @@
               единомышленники, которые поддерживают тебя в твоих начинаниях. И
               как и ты верят, что всё получится. Я не могу их подвести...
             </p>
+            <!-- <p class="card__description">
+              Место для ваших воспоминаний о начале обучения.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -565,11 +586,15 @@
               и со временем. Дорога дальняя - бери попутчиков и друзей. И
               запасайся... не только попкорном)
             </p>
+            <!-- <p class="card__description">
+              Место, чтобы остановиться, подумать и написать, что вы чувствуете
+              в этой точке пути.
+            </p> -->
             <div class="buttons">
               <button type="button" class="button card__icon-button">
                 <svg
                   class="like-icon"
-                  viewBox="-2 -1 43 38"
+                  viewBox="-2 -3 43 38"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
